[package]
name = "gitlab-roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.20",features=["derive"]}
config = "0.14.1"
reqwest = {version="0.12.9",features=["blocking"]}
futures-io = { version = "0.2.0-beta" }
url = "2.5.3"
serde = "1.0.215"
serde_json = "1.0.132"
dialoguer = "0.11.0"
rand = "0.8.5"
ansi-escapes = "0.2.0"
